--- a/admin/css/agenda-monthly-view-admin.css
+++ b/admin/css/agenda-monthly-view-admin.css
@@ -17,6 +17,10 @@
     grid-template-columns: repeat(7, 1fr);
 }
 
+.date-grid {
+    --first-day-of-month: 1;
+}
+
 .single-date {
     font-size: 1.25rem;
     font-weight: 100;
@@ -27,7 +31,6 @@
     cursor: pointer;
     transition: background-color 0.1s 0.05s ease-out;
     aspect-ratio: 1 / 1;
-    --first-day-of-month: 1;
 }
 
 .single-date:hover, .single-date:focus {
@@ -38,4 +41,39 @@
 
 .single-date:first-child {
     grid-column: var(--first-day-of-month);
+}
+
+.single-date.has-events {
+    background-color: #fff8d7;
+}
+
+.btn-unstyled {
+    background: transparent;
+    border: 0;
+    appearance: none;
+    padding: 0;
+}
+
+.single-date .btn-unstyled {
+    width: 100%;
+    height: 100%;
+}
+
+.popover {
+    margin: 1rem;
+}
+
+.popover-header {
+    display: flex;
+    align-items: center;
+} 
+
+.popover-close {
+    line-height: normal;
+    font-size: 1.5rem;
+}
+
+.scrollable .popover-body {
+    max-height: 80vh;
+    overflow-y: auto;
 }
