--- a/public/css/agenda-public.css
+++ b/public/css/agenda-public.css
@@ -13,6 +13,41 @@
     }
 }
 
+.lh-sm {
+    line-height: 1.25;
+}
+
+.small {
+    font-size: 0.875rem;
+}
+
+.ratio {
+    position: relative;
+    width: 100%;
+}
+
+.ratio::before {
+    content: '';
+    display: block;
+    padding-top: var(--bs-aspect-ratio);
+}
+
+.ratio > * {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.ratio > img {
+    object-fit: cover;
+}
+
+.ratio-1x1 {
+    --bs-aspect-ratio: 100%;
+}
+
 /** End Bootstrap v5 **/
 
 .days-of-week span {
@@ -91,4 +126,59 @@
 
 #event_date__outer_ {
     position: static;
+}
+
+.agenda-activities-list {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(26rem, 1fr));
+    gap: 2rem;
+}
+
+.activity {
+    display: flex;
+    align-items: center;
+    max-width: min(100%, 85vw);
+}
+
+.activity__content {
+    padding: 1rem;
+}
+
+.activity__title {
+    font-size: 1.125rem;
+}
+
+.activity__title > a {
+    color: #212529;
+    text-decoration: none;
+    font-weight: bold;
+    transition: color .3s ease-out;
+}
+
+.activity__title > a:hover, .activity__title > a:focus {
+    color: #419683;
+}
+
+.activity__image {
+    flex: 0 0 25%;
+}
+
+.activity__summary {
+    line-height: 1.25;
+    font-size: 0.875rem;
+}
+
+p.activity__summary, .activity__summary p:last-child {
+    margin-bottom: 0;
+}
+
+@media (max-width: 575.98px) {
+    .activity {
+        flex-wrap: wrap;
+    }
+
+    .activity__image {
+        flex-grow: 1;
+        --bs-aspect-ratio: 56.25% !important;
+    }
 }
