--- a/public/css/agenda-public.css
+++ b/public/css/agenda-public.css
@@ -156,7 +156,7 @@
 }
 
 .activity__title > a:hover, .activity__title > a:focus {
-    color: #419683;
+    color: #6c757d;
 }
 
 .activity__image {
